; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_dbf.c_zfcp_dbf_rec_thread_lock.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/scsi/extr_zfcp_dbf.c_zfcp_dbf_rec_thread_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zfcp_dbf = type { %struct.zfcp_adapter* }
%struct.zfcp_adapter = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @zfcp_dbf_rec_thread_lock(i8* %0, %struct.zfcp_dbf* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.zfcp_dbf*, align 8
  %5 = alloca %struct.zfcp_adapter*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store %struct.zfcp_dbf* %1, %struct.zfcp_dbf** %4, align 8
  %7 = load %struct.zfcp_dbf*, %struct.zfcp_dbf** %4, align 8
  %8 = getelementptr inbounds %struct.zfcp_dbf, %struct.zfcp_dbf* %7, i32 0, i32 0
  %9 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %8, align 8
  store %struct.zfcp_adapter* %9, %struct.zfcp_adapter** %5, align 8
  %10 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %5, align 8
  %11 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %10, i32 0, i32 0
  %12 = load i64, i64* %6, align 8
  %13 = call i32 @read_lock_irqsave(i32* %11, i64 %12)
  %14 = load i8*, i8** %3, align 8
  %15 = load %struct.zfcp_dbf*, %struct.zfcp_dbf** %4, align 8
  %16 = call i32 @zfcp_dbf_rec_thread(i8* %14, %struct.zfcp_dbf* %15)
  %17 = load %struct.zfcp_adapter*, %struct.zfcp_adapter** %5, align 8
  %18 = getelementptr inbounds %struct.zfcp_adapter, %struct.zfcp_adapter* %17, i32 0, i32 0
  %19 = load i64, i64* %6, align 8
  %20 = call i32 @read_unlock_irqrestore(i32* %18, i64 %19)
  ret void
}

declare dso_local i32 @read_lock_irqsave(i32*, i64) #1

declare dso_local i32 @zfcp_dbf_rec_thread(i8*, %struct.zfcp_dbf*) #1

declare dso_local i32 @read_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
